# termpp

./: .gitignore  Cargo.toml  README.md  TODO.md
docs/superpowers/plans/: 2026-03-26-help-overlay.md  2026-03-26-pane-nav-visual.md  2026-03-27-workspaces-tabs.md
docs/superpowers/specs/: 2026-03-26-help-overlay-design.md  2026-03-26-pane-nav-visual-design.md  2026-03-27-workspaces-tabs-design.md  2026-03-31-mouse-scrollback-selection-design.md
src/: app.rs  config.rs  lib.rs  main.rs
src/multiplexer/: layout.rs  mod.rs  notification.rs  pane.rs  workspace.rs
src/terminal/: emulator.rs  grid.rs  mod.rs  pty.rs
src/ui/: help_overlay.rs  mod.rs  pane_grid.rs  sidebar.rs  theme.rs
tests/: config_test.rs  git_branch_test.rs  help_overlay_test.rs  keybinding_test.rs  layout_test.rs  notification_test.rs  pane_test.rs  pty_integration_test.rs  scrollback_test.rs  selection_test.rs  sidebar_test.rs
