[package]
name = "termpp"
version = "0.1.0"
edition = "2021"

[dependencies]
iced         = { version = "0.14", features = ["canvas", "tokio"] }
portable-pty = "0.8"
vte          = "0.13"
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"
tokio        = { version = "1", features = ["full"] }
log          = "0.4"
env_logger   = "0.11"
dirs         = "5"
anyhow       = "1"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
